--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [project]
 name = "mas-v0.2"
 version = "0.1.0"
-description = "Multi-Agent System for Cosmetic Industry Digital Marketing"
+description = "Multi-Agent System for Digital Marketing"
 authors = [
     {name = "HuanMu Team", email = "consumerclone@outlook.com"}
 ]
@@ -19,16 +19,12 @@ dependencies = [
     "uvicorn>=0.35.0",
 ]
 
-[project.optional-dependencies]
+[dependency-groups]
 dev = [
-    # Testing
-    "pytest>=8.3.4",
+    "pytest>=8.4.1",
     "black>=25.1.0",
     "isort>=5.14.0",
 ]
-
-[project.scripts]
-mas-server = "main:main"
 
 [tool.black]
 line-length = 88
