--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ dependencies = [
     "langchain>=0.3.27",
     "langgraph>=0.5.4",
     "openai>=1.97.1",
+    "pydantic-settings>=2.10.1",
     "python-dotenv>=1.1.1",
     "redis>=6.2.0",
     "uvicorn>=0.35.0",
