--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ dependencies = [
     "langgraph>=0.5.4",
     "openai>=1.97.1",
     "pydantic-settings>=2.10.1",
+    "pymilvus>=2.3.0",
     "python-dotenv>=1.1.1",
     "redis>=6.2.0",
     "uvicorn>=0.35.0",
