update google-genai package in pyproject file

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,14 +12,12 @@ dependencies = [
     "anthropic>=0.60.0",
     "elasticsearch>=9.1.0",
     "fastapi>=0.116.1",
-    "google-generativeai>=0.8.0",
+    "google-genai>=1.28.0",
     "langchain>=0.3.27",
     "langgraph>=0.6.2",
     "openai>=1.98.0",
-    "pillow>=10.0.0",
     "pydantic-settings>=2.10.1",
     "pymilvus>=2.5.14",
-    "python-multipart>=0.0.6",
     "redis>=6.2.0",
     "uvicorn>=0.35.0",
 ]
