--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,7 +9,9 @@ readme = "README.md"
 requires-python = ">=3.11"
 
 dependencies = [
+    "aiofiles>=24.1.0",
     "anthropic>=0.60.0",
+    "cryptography",
     "elasticsearch>=9.1.0",
     "fastapi>=0.116.1",
     "google-genai>=1.28.0",
@@ -18,8 +20,11 @@ dependencies = [
     "openai>=1.98.0",
     "pydantic-settings>=2.10.1",
     "pymilvus>=2.5.14",
+    "python-multipart>=0.0.7",
     "redis>=6.2.0",
     "uvicorn>=0.35.0",
+    "pillow>=10.0.0",
+
 ]
 
 [dependency-groups]
@@ -27,6 +32,7 @@ dev = [
     "pytest>=8.4.1",
     "black>=25.1.0",
     "isort>=5.14.0",
+    "pre-commit",
 ]
 
 [tool.black]
