--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ requires-python = ">=3.11"
 
 dependencies = [
     "aiofiles>=24.1.0",
+    "aiohttp>=3.12.15",
     "anthropic>=0.60.0",
     "elasticsearch>=9.1.0",
     "fastapi>=0.116.1",
