--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ dependencies = [
     "aiofiles>=24.1.0",
     "aiohttp>=3.12.15",
     "anthropic>=0.60.0",
+    "cryptography>=45.0.6",
     "elasticsearch>=9.1.0",
     "fastapi>=0.116.1",
     "google-genai>=1.28.0",
@@ -24,6 +25,7 @@ dependencies = [
     "redis>=6.2.0",
     "uvicorn>=0.35.0",
     "pillow>=10.0.0",
+    "pyjwt>=2.10.1",
 ]
 
 [dependency-groups]
