--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ dependencies = [
     "aiohttp>=3.12.15",
     "anthropic>=0.60.0",
     "cryptography>=45.0.6",
+    "httpx>=0.27.0",
     "elasticsearch>=9.1.0",
     "fastapi>=0.116.1",
     "google-genai>=1.28.0",
