--- a/.env.example
+++ b/.env.example
@@ -33,6 +33,13 @@ ENABLE_MULTI_TENANT=true
 SECRET_KEY=your_secret_key_here
 JWT_SECRET=your_jwt_secret_here
 
+# === Service Authentication (Backend → MAS) ===
+APP_KEY=your_backend_app_key_here
+APP_JWT_SECRET=your_service_jwt_secret_min_32_chars
+APP_JWT_ISSUER=mas-ai-service
+APP_JWT_AUDIENCE=ai-admin
+APP_TOKEN_TTL_SECONDS=300
+
 # === Logging ===
 LOG_LEVEL=INFO
 LOG_FILE=logs/mas.log
