fix authorization problem

--- a/.env.example
+++ b/.env.example
@@ -27,18 +27,12 @@ ENABLE_INTELLIGENT_ROUTING=true
 
 # === Multi-Tenant Configuration ===
 DEFAULT_TENANT_ID=cosmetic_brand_1
-ENABLE_MULTI_TENANT=true
 
-# === Security ===
-SECRET_KEY=your_secret_key_here
-JWT_SECRET=your_jwt_secret_here
-
-# === Service Authentication (Backend → MAS) ===
+# === Service Authentication ===
 APP_KEY=your_backend_app_key_here
-APP_JWT_SECRET=your_service_jwt_secret_min_32_chars
 APP_JWT_ISSUER=mas-ai-service
 APP_JWT_AUDIENCE=ai-admin
-APP_TOKEN_TTL_SECONDS=300
+APP_TOKEN_TTL=300
 
 # === Logging ===
 LOG_LEVEL=INFO
