feat: update README

--- a/.env.example
+++ b/.env.example
@@ -8,6 +8,14 @@ GOOGLE_API_KEY=your_google_api_key_here
 DEEPSEEK_API_KEY=your_deepseek_api_key_here
 
 # === Database Configuration ===
+# === PostgreSQL Configuration ===
+POSTGRES_HOST=your-database-instance.region.provider.com
+POSTGRES_PORT=5432
+POSTGRES_DB=mas_tenants
+POSTGRES_USER=mas_user
+POSTGRES_PASSWORD=your-secure-password-here
+
+# === Memory & RAG Configuration ===
 ELASTICSEARCH_URL=http://localhost:9200
 REDIS_URL=redis://localhost:6379
 MILVUS_HOST=localhost
