--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,6 +29,7 @@ dependencies = [
     "pillow>=10.0.0",
     "pyjwt>=2.10.1",
     "sqlalchemy>=2.0.42",
+    "greenlet>=3.2.3",
 ]
 
 [dependency-groups]
