--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,53 +12,26 @@ dependencies = [
     "aiofiles>=24.1.0",
     "aiohttp>=3.12.15",
     "alembic>=1.16.4",
-    "anthropic>=0.60.0",
+    "anthropic>=0.64.0",
+    "asyncpg>=0.30.0",
     "cryptography>=45.0.6",
     "elasticsearch>=9.1.0",
     "fastapi>=0.116.1",
-    "google-genai>=1.28.0",
-    "httpx>=0.27.0",
+    "google-genai>=1.30.0",
+    "greenlet>=3.2.4",
     "langchain>=0.3.27",
-    "langgraph>=0.6.2",
-    "openai>=1.98.0",
+    "langgraph>=0.6.5",
+    "openai>=1.100.0",
+    "pillow>=11.3.0",
     "pydantic-settings>=2.10.1",
-    "pymilvus>=2.5.14",
-    "python-multipart>=0.0.7",
-    "redis>=6.2.0",
-    "uvicorn>=0.35.0",
-    "pillow>=10.0.0",
     "pyjwt>=2.10.1",
-    "sqlalchemy>=2.0.42",
-    "greenlet>=3.2.3",
+    "pymilvus>=2.6.0",
+    "python-multipart>=0.0.20",
+    "redis>=6.4.0",
+    "uvicorn>=0.35.0",
 ]
 
 [dependency-groups]
 dev = [
     "pytest>=8.4.1",
-    "black>=25.1.0",
-    "isort>=5.14.0",
-    "pre-commit",
 ]
-
-[tool.black]
-line-length = 88
-target-version = ['py311']
-include = '\.pyi?$'
-extend-exclude = '''
-/(
-  # directories
-  \.eggs
-  | \.git
-  | \.hg
-  | \.mypy_cache
-  | \.tox
-  | \.venv
-  | build
-  | dist
-)/
-'''
-
-[tool.isort]
-profile = "black"
-multi_line_output = 3
-line_length = 88
