--- a/.env.example
+++ b/.env.example
@@ -8,12 +8,13 @@ GOOGLE_API_KEY=your_google_api_key_here
 DEEPSEEK_API_KEY=your_deepseek_api_key_here
 
 # === Database Configuration ===
+DB_HOST=your-database-instance.region.provider.com
+DB_PORT=5432
+DB_NAME=mas
+
 # === PostgreSQL Configuration ===
-POSTGRES_HOST=your-database-instance.region.provider.com
-POSTGRES_PORT=5432
-POSTGRES_DB=mas_tenants
-POSTGRES_USER=mas_user
-POSTGRES_PASSWORD=your-secure-password-here
+POSTGRES_USER=postgres
+POSTGRES_PWD=your-secure-password-here
 
 # === Memory & RAG Configuration ===
 ELASTICSEARCH_URL=http://localhost:9200
@@ -33,9 +34,6 @@ FALLBACK_LLM_PROVIDER=anthropic
 ENABLE_COST_TRACKING=true
 ENABLE_INTELLIGENT_ROUTING=true
 
-# === Multi-Tenant Configuration ===
-DEFAULT_TENANT_ID=cosmetic_brand_1
-
 # === Service Authentication ===
 APP_KEY=your_backend_app_key_here
 APP_JWT_ISSUER=mas-ai-service
@@ -47,6 +45,4 @@ LOG_LEVEL=INFO
 LOG_FILE=logs/mas.log
 
 # === Performance ===
-MAX_CONCURRENT_REQUESTS=100
-REQUEST_TIMEOUT=30
 CACHE_TTL=3600
