--- a/config/models.yaml
+++ b/config/models.yaml
@@ -1,6 +1,7 @@
 - id: "openai"
   type: "openai"
   name: "OpenAI"
+  base_url: "https://api.openai.com/v1"
   enabled: true
   models:
     - id: "gpt-4o"
@@ -33,6 +34,7 @@
   type: "anthropic"
   name: "Anthropic"
   enabled: true
+  base_url: "https://api.anthropic.com/v1"
   models:
     - id: "claude-3-5-sonnet-20241022"
       provider: "anthropic"
@@ -54,6 +56,7 @@
   type: "gemini"
   name: "Google Gemini"
   enabled: true
+  base_url: "https://api.google.com/v1"
   models:
     - id: "gemini-1.5-pro-002"
       provider: "gemini"
