--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,7 @@ dependencies = [
     "google-genai>=1.30.0",
     "greenlet>=3.2.4",
     "langchain>=0.3.27",
+    "langfuse>=3.3.1",
     "langgraph>=0.6.5",
     "openai>=1.100.0",
     "pillow>=11.3.0",
@@ -28,6 +29,7 @@ dependencies = [
     "pymilvus>=2.6.0",
     "python-multipart>=0.0.20",
     "redis>=6.4.0",
+    "sqlalchemy>=2.0.43",
     "uvicorn>=0.35.0",
 ]
 
