--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,7 @@ dependencies = [
     "langchain>=0.3.27",
     "langfuse>=3.3.1",
     "langgraph>=0.6.5",
+    "msgpack>=1.1.1",
     "openai>=1.100.0",
     "pillow>=11.3.0",
     "pydantic-settings>=2.10.1",
