fix: logging duplicate bug

--- a/.env.example
+++ b/.env.example
@@ -18,7 +18,7 @@ POSTGRES_PWD=your-secure-password-here
 
 # === Memory & RAG Configuration ===
 ELASTICSEARCH_URL=http://localhost:9200
-REDIS_URL=redis://localhost:6379
+REDIS_URL=redis://:your_redis_password@localhost:6379
 MILVUS_HOST=localhost
 MILVUS_PORT=19530
 
