--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ dependencies = [
     "alembic>=1.16.4",
     "anthropic>=0.64.0",
     "asyncpg>=0.30.0",
+    "colorlog>=6.9.0",
     "cryptography>=45.0.6",
     "elasticsearch>=9.1.0",
     "fastapi>=0.116.1",
