feat: add dev docker compose file with updated .env.example

--- a/.env.example
+++ b/.env.example
@@ -35,6 +35,12 @@ REDIS_PASSWORD=myredissecret
 REDIS_MAX_CONNECTIONS=10
 REDIS_TTL=7200
 
+# === ClickHouse Configuration ===
+CLICKHOUSE_PORT=8123
+CLICKHOUSE_DB=mas
+CLICKHOUSE_USER=clickhouse
+CLICKHOUSE_PASSWORD=clickhouse
+
 # === MinIO Configuration ===
 MINIO_HOST=localhost
 MINIO_API_PORT=9050
