--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: '3.8'
-
 services:
   # Main MAS application
   mas-agent:
@@ -29,6 +27,22 @@ services:
       - ../models:/app/models
       - ../scripts:/app/scripts
       - ../config:/app/config
+    networks:
+      - mas-network
+
+  clickhouse:
+    container_name: clickhouse
+    image: clickhouse/clickhouse-server
+    user: "101:101"
+    environment:
+      CLICKHOUSE_DB: ${CLICKHOUSE_DB:-mas}
+      CLICKHOUSE_USER: ${CLICKHOUSE_USER:-clickhouse}
+      CLICKHOUSE_PASSWORD: ${CLICKHOUSE_PASSWORD:-clickhouse}
+    ports:
+      - "${CLICKHOUSE_PORT:-8123}:8123"
+      - "9000:9000"
+    volumes:
+      - clickhouse_data:/var/lib/clickhouse
     networks:
       - mas-network
 
@@ -62,19 +76,19 @@ services:
       - mas-network
 
   minio:
-    container_name: milvus-minio
-    image: minio/minio:RELEASE.2023-03-20T20-16-18Z
+    container_name: minio
+    image: minio/minio
+    command: ["sh", "-c", "mkdir -p /data/huanmu && minio server --address :9000 --console-address :9001 /data"]
     environment:
-      MINIO_ACCESS_KEY: minioadmin
-      MINIO_SECRET_KEY: minioadmin
+      MINIO_ROOT_USER: ${MINIO_ROOT_USER:-minio}
+      MINIO_ROOT_PASSWORD: ${MINIO_ROOT_PWD:-miniosecret}
     ports:
-      - "9001:9001"
-      - "9000:9000"
+      - "${MINIO_API_PORT:-9050}:9000"
+      - "${MINIO_CONSOLE_PORT:-9051}:9001"
     volumes:
-      - minio_data:/minio_data
-    command: minio server /minio_data --console-address ":9001"
+      - minio_data:/data
     healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:9000/minio/health/live"]
+      test: ["CMD", "mc", "ready", "local"]
       interval: 30s
       timeout: 20s
       retries: 3
@@ -101,11 +115,16 @@ services:
 
   # Redis for session management
   redis:
-    image: redis:7-alpine
+    container_name: redis
+    image: redis
+    environment:
+      REDIS_PASSWORD: ${REDIS_PASSWORD:-myredissecret}
     ports:
-      - "6379:6379"
+      - "${REDIS_PORT:-6379}:6379"
     volumes:
       - redis_data:/data
+    command: --requirepass ${REDIS_PASSWORD:-myredissecret}
+    restart: always
     networks:
       - mas-network
 
