--- a/web/.env.prod.example
+++ b/web/.env.prod.example
@@ -174,7 +174,7 @@ LANGFUSE_ENABLE_BLOB_STORAGE_FILE_LOG=true
 # Redis configuration
 # REDIS_HOST=
 # REDIS_PORT=
-# REDIS_AUTH=
+# REDIS_PASSWORD=
 # REDIS_USERNAME=default
 # REDIS_CONNECTION_STRING=
 # REDIS_ENABLE_AUTO_PIPELINING=
