--- a/api/.env.example
+++ b/api/.env.example
@@ -4,7 +4,7 @@
 # === Application Configuration ===
 APP_HOST=0.0.0.0
 APP_PORT=8000
-APP_ENV=development
+APP_ENV=DEVELOPMENT
 
 # === Service Authentication ===
 APP_KEY=your_backend_app_key_here
