--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -9,8 +9,7 @@ services:
       - "${DB_PORT:-5432}:5432"
     volumes:
       - postgres_data:/var/lib/postgresql/data
-    networks:
-      - mas-network
+    restart: unless-stopped
     healthcheck:
       test: ["CMD-SHELL", "pg_isready -U ${POSTGRES_USER:-postgres} -d ${DB_NAME:-mas}"]
       interval: 30s
@@ -53,7 +52,8 @@ services:
 
   minio:
     image: minio/minio
-    command: ["sh", "-c", "mkdir -p /data/huanmu && minio server --address :9000 --console-address :9001 /data"]
+    entrypoint: sh
+    command: -c "mkdir -p /data/huanmu && minio server --address ':9000' --console-address ':9001' /data"
     environment:
       MINIO_ROOT_USER: ${MINIO_ROOT_USER:-minio}
       MINIO_ROOT_PASSWORD: ${MINIO_ROOT_PWD:-miniosecret}
