--- a/api/.env.example
+++ b/api/.env.example
@@ -56,5 +56,8 @@ SQLALCHEMY_ECHO=false
 LOG_LEVEL=INFO
 LOG_FILE=logs/mas.log
 
+# === Callback Configuration ===
+CALLBACK_URL=https://your-api-endpoint.com
+
 # === Performance ===
 CACHE_TTL=3600
