feat: modify docker compose file to ready for future integrating with langfuse

--- a/api/.env.example
+++ b/api/.env.example
@@ -12,6 +12,11 @@ APP_JWT_ISSUER=mas-ai-service
 APP_JWT_AUDIENCE=ai-admin
 APP_TOKEN_TTL=3600
 
+# === Langfuse Configuration ===
+LANGFUSE_SECRET_KEY=sk-lf-your-secret-key-here
+LANGFUSE_PUBLIC_KEY=pk-lf-your-public-key-here
+LANGFUSE_HOST=http://localhost:3000
+
 # === LLM Provider API Keys ===
 OPENAI_API_KEY=your_openai_api_key_here
 ANTHROPIC_API_KEY=your_anthropic_api_key_here
