--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -1,4 +1,4 @@
-name: mas-dev-observe
+name: mas-observe
 
 services:
   langfuse-web:
@@ -9,13 +9,9 @@ services:
         - NEXT_PUBLIC_LANGFUSE_CLOUD_REGION=${NEXT_PUBLIC_LANGFUSE_CLOUD_REGION}
     depends_on: &langfuse-depends-on
       postgres:
-        condition: service_healthy
       minio:
-        condition: service_healthy
       redis:
-        condition: service_healthy
       clickhouse:
-        condition: service_healthy
     ports:
       - "3000:3000"
     environment: &langfuse-web-env
@@ -88,7 +84,7 @@ services:
     ports:
       - "${DB_PORT:-5432}:5432"
     volumes:
-      - mas-dev_postgres_data:/var/lib/postgresql/data
+      - postgres_data:/var/lib/postgresql/data
     restart: unless-stopped
     healthcheck:
       test: ["CMD-SHELL", "pg_isready -U ${POSTGRES_USER:-postgres} -d ${DB_NAME:-mas}"]
@@ -103,7 +99,7 @@ services:
     ports:
       - "${REDIS_PORT:-6379}:6379"
     volumes:
-      - mas-dev_redis_data:/data
+      - redis_data:/data
     healthcheck:
       test: ["CMD", "redis-cli", "ping"]
       interval: 30s
@@ -141,7 +137,7 @@ services:
       - "${MINIO_API_PORT:-9050}:9000"
       - "${MINIO_CONSOLE_PORT:-9051}:9001"
     volumes:
-      - mas-dev_minio_data:/data
+      - minio_data:/data
     healthcheck:
       test: ["CMD", "mc", "ready", "local"]
       interval: 30s
@@ -150,9 +146,6 @@ services:
 
 volumes:
   clickhouse_data:
-  mas-dev_redis_data:
-    external: true
-  mas-dev_postgres_data:
-    external: true
-  mas-dev_minio_data:
-    external: true
+  redis_data:
+  postgres_data:
+  minio_data:
