fix: change the folder name under web/ to avoid error

--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -3,7 +3,7 @@ name: mas-observe
 services:
   langfuse-web:
     build:
-      dockerfile: ./web/Dockerfile
+      dockerfile: ./frontend/Dockerfile
       context: ./web
       args:
         - NEXT_PUBLIC_LANGFUSE_CLOUD_REGION=${NEXT_PUBLIC_LANGFUSE_CLOUD_REGION}
