--- a/docker-compose.build.yml
+++ b/docker-compose.build.yml
@@ -1,13 +1,13 @@
 services:
   langfuse-web:
     build:
-      dockerfile: ./web/Dockerfile
+      dockerfile: ./frontend/Dockerfile
       context: ./web
       platforms:
         - linux/amd64
       args:
         - NEXT_PUBLIC_LANGFUSE_CLOUD_REGION=${NEXT_PUBLIC_LANGFUSE_CLOUD_REGION:-}
-    image: registry.consumerclone.online/huanmu/mas-v0.2/web:latest
+    image: registry.consumerclone.online/huanmu/mas-v0.2/frontend:latest
 
   langfuse-worker:
     build:
