--- a/api/.env.example
+++ b/api/.env.example
@@ -22,6 +22,7 @@ OPENAI_API_KEY=your_openai_api_key_here
 ANTHROPIC_API_KEY=your_anthropic_api_key_here
 GOOGLE_API_KEY=your_google_api_key_here
 DEEPSEEK_API_KEY=your_deepseek_api_key_here
+OPENROUTER_API_KEY=your_openrouter_api_key_here
 
 # === Database Configuration ===
 DB_HOST=your-database-instance.region.provider.com
