--- a/api/data/models.yaml
+++ b/api/data/models.yaml
@@ -87,28 +87,28 @@
   models:
     - id: "openai/gpt-5-chat"
       provider: "openrouter"
-      name: "GPT-5 (via OpenRouter)"
+      name: "GPT-5"
       type: "text"
       enabled: true
     - id: "openai/gpt-5-mini"
       provider: "openrouter"
-      name: "GPT-5 Mini (via OpenRouter)"
+      name: "GPT-5 Mini"
       type: "text"
       enabled: true
     - id: "openai/gpt-oss-120b"
       provider: "openrouter"
-      name: "GPT-5 Mini (via OpenRouter)"
+      name: "GPT-5 Mini"
       type: "text"
       enabled: true
     - id: "openai/gpt-4.1-nano"
       provider: "openrouter"
-      name: "openai/gpt-4.1-nano (via OpenRouter)"
+      name: "GPT-4.1-nano"
       type: "text"
       enabled: true
 
     - id: "google/gemini-2.5-flash-preview-09-2025"
       provider: "openrouter"
-      name: "google/gemini-2.5-flash-preview-09-2025 (via OpenRouter)"
+      name: "Gemini-2.5-flash"
       type: "text"
       enabled: true
     
