--- a/api/.env.example
+++ b/api/.env.example
@@ -41,6 +41,17 @@ REDIS_PASSWORD=myredissecret
 REDIS_MAX_CONNECTIONS=10
 REDIS_TTL=7200
 
+# === Elasticsearch Configuration ===
+ELASTICSEARCH_URL=http://localhost:9200
+ES_MEMORY_INDEX=memory_v1
+ES_VECTOR_DIMENSION=3072
+ES_SIMILARITY_METRIC=cosine
+ES_MEMORY_TTL_DAYS=365
+
+# === Milvus Configuration ===
+MILVUS_HOST=localhost
+MILVUS_PORT=19530
+
 # === MinIO Configuration ===
 MINIO_HOST=localhost
 MINIO_API_PORT=9050
