feat: add elasticsearch success

--- a/.env.example
+++ b/.env.example
@@ -29,6 +29,13 @@ REDIS_PASSWORD=myredissecret
 REDIS_MAX_CONNECTIONS=10
 REDIS_TTL=7200
 
+# === Elasticsearch Configuration ===
+ELASTIC_PASSWORD=changeme
+
+# === Milvus Configuration ===
+MILVUS_HOST=localhost
+MILVUS_PORT=19530
+
 # === ClickHouse Configuration ===
 CLICKHOUSE_PORT=8123
 CLICKHOUSE_DB=mas
