--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -118,6 +118,25 @@ services:
       timeout: 10s
       retries: 3
 
+  elasticsearch:
+    image: docker.elastic.co/elasticsearch/elasticsearch
+    environment:
+      - ELASTIC_PASSWORD: ${ELASTIC_PASSWORD:-}
+      - discovery.type=single-node
+      - bootstrap.memory_lock=true
+      - xpack.security.enabled=false
+      - xpack.security.http.ssl.enabled=false
+      - xpack.license.self_generated.type=basic
+    mem_limit: 1g
+    ulimits:
+      memlock:
+        soft: -1
+        hard: -1
+    ports:
+      - "9200:9200"
+    volumes:
+      - es_data:/usr/share/elasticsearch/data
+
   minio:
     image: minio/minio
     entrypoint: sh
