--- a/api/pyproject.toml
+++ b/api/pyproject.toml
@@ -31,6 +31,7 @@ dependencies = [
     "python-multipart>=0.0.20",
     "redis>=7.0.1",
     "sqlalchemy>=2.0.43",
+    "temporalio>=1.18.2",
     "uvicorn>=0.35.0",
 ]
 
