--- a/docker/.env.example
+++ b/docker/.env.example
@@ -82,3 +82,28 @@ CACHE_TTL=3600
 # === Deployment ===
 REGISTRY_URL=registry.gitlab.com
 CALLBACK_URL=http://your-callback-url.com
+
+# === Nginx Configuration ===
+# Server name (use _ for catch-all, or your domain name)
+NGINX_SERVER_NAME=_
+
+# HTTP/HTTPS ports
+NGINX_PORT=80
+NGINX_SSL_PORT=443
+EXPOSE_NGINX_PORT=80
+EXPOSE_NGINX_SSL_PORT=443
+
+# HTTPS/SSL Configuration
+# Set to true to enable HTTPS (requires SSL certificates in docker/nginx/ssl/)
+NGINX_HTTPS_ENABLED=false
+NGINX_SSL_CERT_FILENAME=mas.crt
+NGINX_SSL_CERT_KEY_FILENAME=mas.key
+
+# Performance Settings
+NGINX_KEEPALIVE_TIMEOUT=65
+NGINX_CLIENT_MAX_BODY_SIZE=100M
+
+# Proxy Timeouts (important for AI/ML workloads)
+# Set to high values for long-running LLM requests
+NGINX_PROXY_READ_TIMEOUT=3600s
+NGINX_PROXY_SEND_TIMEOUT=3600s
