--- a/docker/docker-compose.build.yml
+++ b/docker/docker-compose.build.yml
@@ -1,7 +1,7 @@
 name: mas-observe
 
 services:
-  mas:
+  api:
     build:
       context: ./api
       dockerfile: Dockerfile
@@ -39,6 +39,34 @@ services:
       - milvus-standalone
       - langfuse-web
       - temporal
+    restart: unless-stopped
+
+  nginx:
+    image: nginx:alpine
+    depends_on:
+      - api
+      - langfuse-web
+    ports:
+      - "80:${NGINX_PORT:-80}"
+      - "443:${NGINX_SSL_PORT:-443}"
+    volumes:
+      - ./nginx/nginx.conf.template:/etc/nginx/nginx.conf.template:ro
+      - ./nginx/https.conf.template:/etc/nginx/https.conf.template:ro
+      - ./nginx/proxy.conf.template:/etc/nginx/proxy.conf.template:ro
+      - ./nginx/docker-entrypoint.sh:/docker-entrypoint.sh
+      - ./nginx/ssl:/etc/ssl:ro  # Place your SSL certs here if HTTPS enabled
+    entrypoint: /docker-entrypoint.sh
+    environment:
+      NGINX_SERVER_NAME: ${NGINX_SERVER_NAME:-_}
+      NGINX_PORT: ${NGINX_PORT:-80}
+      NGINX_SSL_PORT: ${NGINX_SSL_PORT:-443}
+      NGINX_HTTPS_ENABLED: ${NGINX_HTTPS_ENABLED:-false}
+      NGINX_SSL_CERT_FILENAME: ${NGINX_SSL_CERT_FILENAME:-mas.crt}
+      NGINX_SSL_CERT_KEY_FILENAME: ${NGINX_SSL_CERT_KEY_FILENAME:-mas.key}
+      NGINX_KEEPALIVE_TIMEOUT: ${NGINX_KEEPALIVE_TIMEOUT:-65}
+      NGINX_CLIENT_MAX_BODY_SIZE: ${NGINX_CLIENT_MAX_BODY_SIZE:-100M}
+      NGINX_PROXY_READ_TIMEOUT: ${NGINX_PROXY_READ_TIMEOUT:-3600s}
+      NGINX_PROXY_SEND_TIMEOUT: ${NGINX_PROXY_SEND_TIMEOUT:-3600s}
     restart: unless-stopped
 
   langfuse-web:
